Use List.of() and Map.of() in YoutubeParsingHelper.